--- a/SLBr/Resources/ProcessCrashed.html
+++ b/SLBr/Resources/ProcessCrashed.html
@@ -5,9 +5,11 @@ Use of this source code is governed by a GNU license that can be found in the LI
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script type="text/javascript" src="https://lupatec.eu/getfirebug/firebug-lite-compressed.js#startOpened"></script>-->
     <title>Process Crashed</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
     <style>
         body{
             text-align: center;
@@ -31,7 +33,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
         <h1 class="icon"></h1>
         <h2>Process Crashed</h2>
         <h5>
-            process crashed while attempting to load content. Undo/Refresh the page to resolve the problem.
+            Process crashed while attempting to load content. Undo/Refresh the page to resolve the problem.
         </h5>
         <a href="slbr://newtab">Return to homepage</a>
     </div>
