--- a/SLBr/Resources/Deception.html
+++ b/SLBr/Resources/Deception.html
@@ -20,8 +20,8 @@ Use of this source code is governed by a GNU license that can be found in the LI
             margin-top: 140px;
         }
 
-        .icon{
-            font-family: 'Segoe MDL2 Assets';
+        .icon {
+            font-family: 'Segoe Fluent Icons';
             font-size: 150px;
         }
     </style>
