--- a/SLBr/Resources/History.html
+++ b/SLBr/Resources/History.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
     <script type="text/javascript">
+        CefSharp.BindObjectAsync("internal");
         var $container;
         var $template;
         var timer;
