--- a/SLBr/Resources/Downloads.html
+++ b/SLBr/Resources/Downloads.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
     <script type="text/javascript">
-        CefSharp.BindObjectAsync("internal");
+        engine.bindObjectAsync("internal");
         var $container;
         var $template;
         var timer;
         $(document).ready(function () {
             $container = $("#downloads-display");
             $template = $("#template");
-            CefSharp.BindObjectAsync("internal");
+            engine.bindObjectAsync("internal");
             UpdateList();
             timer = setInterval(UpdateList, 500);
         });
